# honor-of-hreo

./: .gitignore  CMakeLists.txt  app_icon.rc.in  assetpaths.h.in  boomerangbullet.cpp  bullet.cpp  bullet.h  bullet4.cpp  bullet4.h  config.h  crystal.cpp  enemy.cpp  enemy.h  enemybullet.cpp  enemybullet.h  enemybullet2.cpp  enemybullet2.h  hero.cpp  hero.h  main.cpp  mainwindow.cpp  mainwindow.h  medicinepack.cpp  medicinepack.h  pet.cpp  skilliconwidget.cpp  skilliconwidget.h  tower.cpp
installer/: honor-of-hero.sed  install.cmd
res/: README.md  download_angela_sprites.py
